--- a/index.html
+++ b/index.html
@@ -3,15 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linkage Analysis</title>
+    <title>Your Project</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 1em;
+            text-align: center;
+        }
+
+        section {
+            max-width: 800px;
+            margin: 2em auto;
+            padding: 2em;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 1em;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Linkage Analysis</h1>
-    <form action="/result" method="post">
-        <label for="links">Enter Links:</label>
-        <textarea id="links" name="links" rows="10" cols="50"></textarea>
-        <br>
-        <input type="submit" value="Run Analysis">
-    </form>
+
+    <header>
+        <h1>Your Project Name</h1>
+    </header>
+
+    <section>
+        <h2>Welcome to Your Project</h2>
+        <p>This is a simple HTML and CSS template for your project.</p>
+        <!-- Add more content as needed -->
+    </section>
+
+    <footer>
+        &copy; 2024 Your Project. All rights reserved.
+    </footer>
+
 </body>
 </html>
