--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
         <p>This is a simple HTML and CSS template for your project. Customize it to showcase your project's features and information.</p>
         <a href="#" class="cta-button">Try the Demo</a>
     </section>
-
+    <section id="code">
+        <h2>Project Code</h2>
+        <p>Explore the code for this project on GitHub:</p>
+        <a href="https://github.com/yourusername/your-repo" class="cta-button" target="_blank">View Code on GitHub</a>
+    </section>
     <!-- More sections as needed -->
 
     <footer>
