--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <section id="code">
         <h2>Project Code</h2>
         <p>Explore the code for this project on GitHub:</p>
-        <a href="https://github.com/yourusername/your-repo" class="cta-button" target="_blank">View Code on GitHub</a>
+        <a href="https://github.com/RupakMukherjee/Ratul-Chakraborty-22UMPY15/blob/main/Linkage.py" class="cta-button" target="_blank">View Code on GitHub</a>
     </section>
     <!-- More sections as needed -->
 
