--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Project</title>
+    <title>LINKAGE (M.Sc Project)</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -72,14 +72,16 @@
     </nav>
 
     <section id="about">
-        <h2>Welcome to Your Project</h2>
-        <p>This is a simple HTML and CSS template for your project. Customize it to showcase your project's features and information.</p>
+        <h2>Introduction</h2>
+        <p>This project focuses on developing a data-based numerical algorithm capable of computing the linking number of a two-component Hopf link and a two-component Unlink. The primary objective is to compare and distinguish between the two. Successfully computed, the linking numbers of the Hopf link and the Unlink provided a basis for differentiation using the code in the Linkage.py file.
+Subsequently, the algorithm was generalized to compute the linking number (Helicity) for any given n-component Hopf link, where n=1,2,3,4,5, and so on. This generalization allows for the distinction between different components. The code for this generalized algorithm is provided in the n_component_HELICITY.py file.
+Moving forward, we next aim for applying these algorithms to various data-driven physical phenomena.</p>
         <a href="#" class="cta-button">Try the Demo</a>
     </section>
     <section id="code">
         <h2>Project Code</h2>
         <p>Explore the code for this project on GitHub:</p>
-        <a href="https://github.com/RupakMukherjee/Ratul-Chakraborty-22UMPY15/blob/main/Linkage.py" class="cta-button" target="_blank">View Code on GitHub</a>
+        <a href="https://github.com/RupakMukherjee/Ratul-Chakraborty-22UMPY15/blob/main/Linkage.py" class="cta-button" target="_blank">View Code on Linkage.py and n_component_Helicity.py</a>
     </section>
     <!-- More sections as needed -->
 
