--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
 
     <header>
-        <h1>Your Project Name</h1>
+        <h1>LINKAGE (M.Sc Project)</h1>
     </header>
 
     <nav>
@@ -81,7 +81,7 @@ Moving forward, we next aim for applying these algorithms to various data-driven
     <section id="code">
         <h2>Project Code</h2>
         <p>Explore the code for this project on GitHub:</p>
-        <a href="https://github.com/RupakMukherjee/Ratul-Chakraborty-22UMPY15/blob/main/Linkage.py" class="cta-button" target="_blank">View Code on Linkage.py and n_component_Helicity.py</a>
+        <a href="https://github.com/RupakMukherjee/Ratul-Chakraborty-22UMPY15" class="cta-button" target="_blank">View Code on Linkage.py and n_component_Helicity.py</a>
     </section>
     <!-- More sections as needed -->
 
