--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LINKAGE (M.Sc Project)</title>
+    <!-- Link Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -76,18 +78,25 @@
         <p>This project focuses on developing a data-based numerical algorithm capable of computing the linking number of a two-component Hopf link and a two-component Unlink. The primary objective is to compare and distinguish between the two. Successfully computed, the linking numbers of the Hopf link and the Unlink provided a basis for differentiation using the code in the Linkage.py file.
 Subsequently, the algorithm was generalized to compute the linking number (Helicity) for any given n-component Hopf link, where n=1,2,3,4,5, and so on. This generalization allows for the distinction between different components. The code for this generalized algorithm is provided in the n_component_HELICITY.py file.
 Moving forward, we next aim for applying these algorithms to various data-driven physical phenomena.</p>
-        <a href="#" class="cta-button">Try the Demo</a>
+        <!-- Use Bootstrap primary button class -->
+        <a href="#" class="btn btn-primary">Try the Demo</a>
     </section>
     <section id="code">
         <h2>Project Code</h2>
         <p>Explore the code for this project on GitHub:</p>
-        <a href="https://github.com/RupakMukherjee/Ratul-Chakraborty-22UMPY15" class="cta-button" target="_blank">View Code on Linkage.py and n_component_Helicity.py</a>
+        <!-- Use Bootstrap secondary button class -->
+        <a href="https://github.com/yourusername/your-repo" class="btn btn-secondary" target="_blank">View Code on Linkage.py and n_component_HELICITY.py</a>
+        
     </section>
     <!-- More sections as needed -->
 
     <footer>
-        &copy; 2024 Your Project. All rights reserved. | Follow us on <a href="#" target="_blank">Twitter</a>
+        &copy; 2024 Linkage. All rights reserved. | Follow us on <a href="#" target="_blank">Github</a>
     </footer>
+    <!-- Link Bootstrap JS and Popper.js (required for Bootstrap dropdowns) -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 </body>
 </html>
