--- a/demo.html
+++ b/demo.html
@@ -22,10 +22,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="image1.jpg" alt="Image 1" class="img-fluid">
+                    <img src="3 component.png" alt="Image 1" class="img-fluid">
                 </div>
                 <div class="col-md-4">
-                    <img src="image2.jpg" alt="Image 2" class="img-fluid">
+                    <img src="u.png" alt="Image 2" class="img-fluid">
                 </div>
                 <div class="col-md-4">
                     <img src="image3.jpg" alt="Image 3" class="img-fluid">
