--- a/demo.html
+++ b/demo.html
@@ -28,7 +28,7 @@
                     <img src="u.png" alt="Image 2" class="img-fluid">
                 </div>
                 <div class="col-md-4">
-                    <img src="image3.jpg" alt="Image 3" class="img-fluid">
+                    <img src="disc hpolk.png" alt="Image 3" class="img-fluid">
                 </div>
                 <!-- Add more images as needed -->
             </div>
