--- a/demo.html
+++ b/demo.html
@@ -22,13 +22,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="3 component.png" alt="Image 1" class="img-fluid">
+                    <img src="3%20component.png" alt="Image 1" class="img-fluid">
                 </div>
                 <div class="col-md-4">
                     <img src="u.png" alt="Image 2" class="img-fluid">
                 </div>
                 <div class="col-md-4">
-                    <img src="disc hpolk.png" alt="Image 3" class="img-fluid">
+                    <img src="disc%20hpolk.png" alt="Image 3" class="img-fluid">
                 </div>
                 <!-- Add more images as needed -->
             </div>
