--- a/demo.html
+++ b/demo.html
@@ -10,65 +10,58 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f8f9fa;
-            color: #333;
             margin: 0;
             padding: 0;
+            background-color: #f4f4f4;
         }
 
         header {
-            background-color: #343a40;
+            background-color: #333;
             color: #fff;
             padding: 1em;
             text-align: center;
-            margin-bottom: 20px;
         }
 
         section {
             max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
+            margin: 2em auto;
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-        }
-
-        img {
-            width: 100%;
-            height: auto;
-            border-radius: 5px;
-            margin-bottom: 15px;
-        }
-
-        footer {
-            background-color: #343a40;
-            color: #fff;
             padding: 1em;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+            border-radius: 5px;
         }
+
+        .img-container {
+            margin-top: 20px;
+        }
+
+        .img-container img {
+            width: 100%;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+
+        /* Add any additional styles for your demo page */
     </style>
 </head>
 <body>
 
     <header>
-        <h1>Outputs created by Linkage.py and n_component_HELICITY.py</h1>
+        <h1>Outputs created by the codes Linkage and n_component_HELICITY</h1>
     </header>
 
     <section>
         <!-- Add multiple images here -->
-        <div class="container">
+        <div class="container img-container">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="3%20component.png" alt="Image 1">
+                    <img src="images/3%20component.png" alt="Image 1">
                 </div>
                 <div class="col-md-4">
-                    <img src="u.png" alt="Image 2">
+                    <img src="images/u.png" alt="Image 2">
                 </div>
                 <div class="col-md-4">
-                    <img src="disc%20hpolk.png" alt="Image 3">
+                    <img src="images/disc%20hpolk.png" alt="Image 3">
                 </div>
                 <!-- Add more images as needed -->
             </div>
@@ -79,10 +72,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-    <footer>
-        &copy; 2024 Linkage. All rights reserved. | Follow us on <a href="#" target="_blank">Github</a>
-    </footer>
 
 </body>
 </html>
