--- a/demo.html
+++ b/demo.html
@@ -63,6 +63,13 @@
                 <div class="col-md-4">
                     <img src="images/disc%20hpolk.png" alt="Image 3">
                 </div>
+                <div class="col-md-4">
+                    <img src="images/4(1)%20component.png" alt="Image 3">
+                </div>
+                <div class="col-md-4">
+                    <img src="images/5%20component.png" alt="Image 3">
+                </div>
+                
                 <!-- Add more images as needed -->
             </div>
         </div>
