--- a/demo.html
+++ b/demo.html
@@ -69,6 +69,9 @@
                 <div class="col-md-4">
                     <img src="images/5%20component.png" alt="Image 3">
                 </div>
+                <div class="col-md-4">
+                    <img src="images/6%20component.png" alt="Image 3">
+                </div>
                 
                 <!-- Add more images as needed -->
             </div>
