--- a/demo.html
+++ b/demo.html
@@ -77,7 +77,10 @@
             </div>
         </div>
     </section>
-
+    <!-- Note -->
+    <div class="note">
+        <p>The Linkage algorithm can only distinguish between the two-component unlink and the two-component Hopf link. On the other hand, the n_component_HELICITY algorithm is a more generalized version of the former. It has the capability to differentiate between various 'n' component Hopf rings, where 'n' can be 2, 3, 4, 5, 6, and so forth. Each of these links is generated from a dataset of discrete points.</p>
+    </div>
     <!-- Link Bootstrap JS and Popper.js (required for Bootstrap dropdowns) -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
