--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <nav>
         <a href="#about">About</a>
-        <a href="demo.html">Demo</a>
+        <a href="demo.html">Images</a>
         <a href="#code">Code</a>
     </nav>
 
@@ -77,10 +77,10 @@
     <section id="about">
         <h2>Introduction</h2>
         <p>This project focuses on developing a data-based numerical algorithm capable of computing the linking number of a two-component Hopf link and a two-component Unlink. The primary objective is to compare and distinguish between the two. Successfully computed, the linking numbers of the Hopf link and the Unlink provided a basis for differentiation using the code in the Linkage.py file.
-Subsequently, the algorithm was generalized to compute the linking number (Helicity) for any given n-component Hopf link, where n=1,2,3,4,5, and so on. This generalization allows for the distinction between different components. The code for this generalized algorithm is provided in the n_component_HELICITY.py file.
+Subsequently, the algorithm was generalized to compute the linking number (Helicity) for any given n-component Hopf link, where n=2,3,4,5,6 and so on. This generalization allows for the distinction between different components. The code for this generalized algorithm is provided in the n_component_HELICITY.py file.
 Moving forward, we next aim for applying these algorithms to various data-driven physical phenomena.</p>
         <!-- Use Bootstrap primary button class -->
-        <a href="demo.html" class="btn btn-primary">Try the Demo</a>
+        <a href="demo.html" class="btn btn-primary">Illustrative Images</a>
     </section>
     <section id="code">
         <h2>Project Code</h2>
