--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <h2 class="text-white mt-0">Introduction</h2>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4">LINKAGE is a computational tool focusing on differentiating between the two-component Unlink and the Hopf Link. LINKAGE employs the linking number, calculated through Barycentric Equations, Matrix Algebra, and basic topological principles, to quantify the degree of linking between two closed curves in three-dimensional space.</p>
-                        <a class="btn btn-light btn-xl" href="newpage.html">More details</a>
+                        <a class="btn btn-light btn-xl" href="introduction_page/newpage.html">More details</a>
                     </div>
                 </div>
             </div>
