--- a/introduction_page/newpage.html
+++ b/introduction_page/newpage.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction to Knots and Links</title>
@@ -42,6 +44,7 @@
             margin-top: 5px;
         }
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section>
