--- a/introduction_page/newpage.html
+++ b/introduction_page/newpage.html
@@ -19,6 +19,7 @@
         h1 {
             font-size: 2em;
             margin-bottom: 10px;
+            text-align: center;
         }
         h2 {
             font-size: 1.5em;
@@ -60,11 +61,11 @@
         </p>
         <figure>
             <div style="flex: 1; padding-right: 10px;">
-                <img src="hpfring.png" alt="Hopf ring">
+                <img src="introduction_page/img/hpfring.png" alt="Hopf ring">
                 <figcaption>Hopf ring</figcaption>
             </div>
             <div style="flex: 1; padding-left: 10px;">
-                <img src="un.png" alt="Unlink">
+                <img src="introduction_page/img/un.png" alt="Unlink">
                 <figcaption>Unlink</figcaption>
             </div>
         </figure>
