--- a/introduction_page/newpage.html
+++ b/introduction_page/newpage.html
@@ -61,11 +61,11 @@
         </p>
         <figure>
             <div style="flex: 1; padding-right: 10px;">
-                <img src="introduction_page/img/hpfring.png" alt="Hopf ring">
+                <img src="img/hpfring.png" alt="Hopf ring">
                 <figcaption>Hopf ring</figcaption>
             </div>
             <div style="flex: 1; padding-left: 10px;">
-                <img src="introduction_page/img/un.png" alt="Unlink">
+                <img src="img/un.png" alt="Unlink">
                 <figcaption>Unlink</figcaption>
             </div>
         </figure>
