--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Creative - Start Bootstrap Theme</title>
+        <title>LINKAGE</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap Icons-->
@@ -44,7 +44,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 mb-5">An in-house developed open-source software to distinguish knots</p>
-                        <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
+                        <a class="btn btn-primary btn-xl" href="#about">Let's begin!</a>
                     </div>
                 </div>
             </div>
@@ -54,10 +54,10 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Introduction</h2>
+                        <h2 class="text-white mt-0">About</h2>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4">LINKAGE is a computational tool focusing on differentiating between the two-component Unlink and the Hopf Link. LINKAGE employs the linking number, calculated through Barycentric Equations, Matrix Algebra, and basic topological principles, to quantify the degree of linking between two closed curves in three-dimensional space.</p>
-                        <a class="btn btn-light btn-xl" href="introduction_page/newpage.html">More details</a>
+                        <a class="btn btn-light btn-xl" href="introduction_page/newpage.html">In-depth explanation</a>
                     </div>
                 </div>
             </div>
