--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
                                 <li><a class="dropdown-item" href="topology-intro.html">Introduction to Topology</a></li>
                                 <li><a class="dropdown-item" href="topology-knots.html">Knots in Topology</a></li>
                                 <li><a class="dropdown-item" href="topology-links.html">Links in Topology</a></li>
+                                <li><a class="dropdown-item" href="topology-equivalence.html">Links in Topology</a></li>
+                                <li><a class="dropdown-item" href="topology-library.html">Links in Topology</a></li>
                             </ul>
                         </li>
                         <!-- Projects Dropdown -->
@@ -92,7 +94,7 @@
                         <h2 class="text-white mt-0">ABOUT</h2>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4">LINKAGE is a computational tool focusing on differentiating between the two-component Unlink and the Hopf Link. LINKAGE employs the linking number, calculated through Barycentric Equations, Matrix Algebra, and basic topological principles, to quantify the degree of linking between two closed curves in three-dimensional space.</p>
-                        <a class="btn btn-light btn-xl" href="introduction_page/newpage.html">In-depth explanation</a>
+                        <a class="btn btn-light btn-xl" href="about/newpage.html">In-depth explanation</a>
                     </div>
                 </div>
             </div>
