--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                 Topology
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="topologyDropdown">
-                                <li><a class="dropdown-item" href="topology-intro.html">Introduction to Topology</a></li>
+                                <li><a class="dropdown-item" href="topology-intro/topology-intro.html">Introduction to Topology</a></li>
                                 <li><a class="dropdown-item" href="topology-knots.html">Knots in Topology</a></li>
                                 <li><a class="dropdown-item" href="topology-links.html">Links in Topology</a></li>
                                 <li><a class="dropdown-item" href="topology-equivalence.html">Links in Topology</a></li>
