--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                 About
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
-                                <li><a class="dropdown-item" href="introduction_page/newpage.html">Introduction</a></li>
+                                <li><a class="dropdown-item" href="about/newpage.html">Introduction</a></li>
                                 
                             </ul>
                         </li>
@@ -44,7 +44,7 @@
                                 Topology
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="topologyDropdown">
-                                <li><a class="dropdown-item" href="topology/topology-intro/intro.html">Introduction to Topology</a></li>
+                                <li><a class="dropdown-item" href="../topology/topology-intro/intro.html">Introduction to Topology</a></li>
                                 <li><a class="dropdown-item" href="topology-knots.html">Knots in Topology</a></li>
                                 <li><a class="dropdown-item" href="topology-links.html">Links in Topology</a></li>
                                 <li><a class="dropdown-item" href="topology-equivalence.html">Links in Topology</a></li>
