--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                 About
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
-                                <li><a class="dropdown-item" href="about/newpage.html">Introduction</a></li>
+                                <li><a class="dropdown-item" href="../about/newpage.html">Introduction</a></li>
                                 
                             </ul>
                         </li>
