--- a/topology/intro.html
+++ b/topology/intro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Brief Introduction to Topology</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="introstyles.css">
 </head>
 <body>
     <header>
