--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="topologyDropdown">
                                 <li><a class="dropdown-item" href="topology/intro.html">Introduction to Topology</a></li>
-                                <li><a class="dropdown-item" href="topology-knots.html">Knots in Topology</a></li>
-                                <li><a class="dropdown-item" href="topology-links.html">Links in Topology</a></li>
-                                <li><a class="dropdown-item" href="topology-equivalence.html">Links in Topology</a></li>
-                                <li><a class="dropdown-item" href="topology-library.html">Links in Topology</a></li>
+                                <li><a class="dropdown-item" href="topology/knots.html">What are Knots and Links?</a></li>
+                                <li><a class="dropdown-item" href="topology/equivalence.html">The Equivalence Problem</a></li>
+                                <li><a class="dropdown-item" href="topology/linkingnumber.html">Linking Number</a></li>
+                                
                             </ul>
                         </li>
                         <!-- Projects Dropdown -->
@@ -109,31 +109,25 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Knots</h3>
-                            <p class="text-muted mb-0">What are Knots?</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Links</h3>
-                            <p class="text-muted mb-0">What are Links?</p>
+                            <h3 class="h4 mb-2">Knots and Links</h3>
+                            <p class="text-muted mb-0">Topological viewpoint</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">The Equivalence Problem</h3>
-                            <p class="text-muted mb-0">What purpose does linking number serves?</p>
+                            <p class="text-muted mb-0">Invariance under homeomorphism</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Library</h3>
-                            <p class="text-muted mb-0">Learn by watching videos and reading papers</p>
+                            <h3 class="h4 mb-2">Linking Number</h3>
+                            <p class="text-muted mb-0">A topological invariant</p>
                         </div>
                     </div>
+                    
                 </div>
             </div>
         </section>
