--- a/topology/equivalence.html
+++ b/topology/equivalence.html
@@ -15,10 +15,10 @@
         <figure>
             <div class="image-gallery">
                 <div>
-                    <img src="k3.png" alt="Complicated Knot 1" width="100%">
+                    <img src="equivimg/k3.png" alt="Complicated Knot 1" width="100%">
                 </div>
                 <div>
-                    <img src="k4.png" alt="Complicated Knot 2" width="100%">
+                    <img src="equivimg/k4.png" alt="Complicated Knot 2" width="100%">
                 </div>
             </div>
             <figcaption>Two Complicated Knots</figcaption>
