--- a/index.html
+++ b/index.html
@@ -106,31 +106,58 @@
                 <h2 class="text-center mt-0">TOPOLOGY</h2>
                 <hr class="divider" />
                 <div class="row gx-4 gx-lg-5">
+                    <!-- Knots and Links Section -->
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Knots and Links</h3>
+                            <div class="mb-2">
+                                <i class="bi-gem fs-1 text-primary"></i>
+                            </div>
+                            <h3 class="h4 mb-2">
+                                <a href="topology/knots.html" style="text-decoration: none; color: inherit;">Knots and Links</a>
+                            </h3>
                             <p class="text-muted mb-0">Topological viewpoint</p>
                         </div>
                     </div>
+                    <!-- The Equivalence Problem Section -->
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">The Equivalence Problem</h3>
+                            <div class="mb-2">
+                                <i class="bi-gem fs-1 text-primary"></i>
+                            </div>
+                            <h3 class="h4 mb-2">
+                                <a href="topology/equivalence.html" style="text-decoration: none; color: inherit;">The Equivalence Problem</a>
+                            </h3>
                             <p class="text-muted mb-0">Invariance under homeomorphism</p>
                         </div>
                     </div>
+                    <!-- Linking Number Section -->
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Linking Number</h3>
+                            <div class="mb-2">
+                                <i class="bi-gem fs-1 text-primary"></i>
+                            </div>
+                            <h3 class="h4 mb-2">
+                                <a href="topology/linkingnumber.html" style="text-decoration: none; color: inherit;">Linking Number</a>
+                            </h3>
                             <p class="text-muted mb-0">A topological invariant</p>
                         </div>
                     </div>
-                    
+                    <!-- Library Section -->
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <div class="mb-2">
+                                <i class="bi-gem fs-1 text-primary"></i>
+                            </div>
+                            <h3 class="h4 mb-2">
+                                <a href="topology/library.html" style="text-decoration: none; color: inherit;">Library</a>
+                            </h3>
+                            <p class="text-muted mb-0">More information</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
+        
         <!-- Portfolio-->
         <div id="portfolio">
             <div class="container-fluid p-0">
